# TextReader

./: CMakeLists.txt  README.txt
inc/: ConsoleReader.hpp  Reader.hpp  ReaderFactory.hpp  TextFileReader.hpp  XmlFileReader.hpp
src/: CMakeLists.txt  ConsoleReader.cpp  Reader.cpp  TextFileReader.cpp  XmlFileReader.cpp  main.cpp
test/: CMakeLists.txt
test/assets/: sample.txt  sample.xml
test/test_cases/: test1.cpp
